<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/card_view_margin"
    app:contentPadding="@dimen/card_view_content_padding">

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/iv_logo"
            android:contentDescription="@string/logo_content_description"
            android:layout_width="@dimen/logo_news_source_size"
            android:layout_height="@dimen/logo_news_source_size"
            android:layout_marginRight="@dimen/logo_news_source_right_margin"
            android:layout_marginEnd="@dimen/logo_news_source_right_margin"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_name"
                android:text="@string/stuff_news_source_title"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/tv_description"
                android:text="@string/stuff_news_source_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Caption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>

    </LinearLayout>


</android.support.v7.widget.CardView>