<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/card_view_margin"
    app:contentPadding="@dimen/card_view_content_padding">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_title"
            android:text="@string/stuff_news_article_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/title_news_article_margin_bottom"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_description"
                android:text="@string/stuff_news_article_description"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"/>

            <ImageView
                android:id="@+id/image_view"
                android:contentDescription="@string/article_image_content_description"
                android:src="@drawable/tr"
                android:scaleType="fitStart"
                android:layout_width="@dimen/img_news_article_width"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/img_news_article_margin_left"/>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>